--- a/projects/icc/calendar/src/calendar.component.scss
+++ b/projects/icc/calendar/src/calendar.component.scss
@@ -2,6 +2,21 @@
   display: flex;
   flex-direction: column;
 
+  .icc-calendar-selected-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+
+    .icc-calendar-selected-label {
+      font-weight: bold;
+    }
+
+    .icc-calendar-selected-date {
+      padding-left: 5px;
+    }
+  }
+
   ::ng-deep mat-calendar-header {
     .mat-calendar-header {
       padding: 0px 8px;
@@ -9,17 +24,6 @@
       .mat-calendar-controls {
         margin: 0px;
       }
-    }
-  }
-
-  .icc-calendar-selected-label {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 24px;
-
-    .icc-calendar-selected-date {
-      padding-left: 5px;
     }
   }
 }
