--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
@@ -1,14 +1,6 @@
 <div>
   <div><br /></div>
 
-  <div [ngStyle]="{ display: 'flex', 'flex-direction': 'row' }">
-    Click Popover Menu
-    <div [ngStyle]="{ 'padding-left': '5px', width: '10px' }">
-      <icc-popover-menu [menuItem]="testMenuItems" [clickToClose]="true" [menuTrigger]="contextmenu">
-      </icc-popover-menu>
-    </div>
-  </div>
-
   <div><br /></div>
 
   <div><br /></div>
@@ -27,6 +19,18 @@
 
   <div><br /></div>
   <div><br /></div>
+
+  <div [ngStyle]="{ display: 'flex', 'flex-direction': 'row' }">
+    Click Popover Menu
+    <div [ngStyle]="{ 'padding-left': '5px', width: '50px' }">
+      <icc-popover-menu [menuItem]="testMenuItems" [clickToClose]="true"> </icc-popover-menu>
+    </div>
+  </div>
+
   <div><br /></div>
   <div><br /></div>
+
+  <div #menuPanelEl [ngStyle]="{ 'padding-left': '5px', width: '200px' }" (click)="openMenuPanel($event)">
+    Menu Panel Componemt
+  </div>
 </div>
