--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.scss
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.scss
@@ -7,5 +7,10 @@
     display: flex;
     flex-direction: column;
     width: 600px;
+
+    ::ng-deep .icc-menu-row span {
+      display: block;
+      width: 100%;
+    }
   }
 }
