--- a/projects/icc/layout/src/layout-horizontal.component.scss
+++ b/projects/icc/layout/src/layout-horizontal.component.scss
@@ -7,10 +7,10 @@
   ::ng-deep {
     icc-layout-left {
       display: flex;
+      flex: 0 0 250px;
       position: relative;
       z-index: 1;
       min-width: 20px;
-      width: 250px;
       height: -webkit-fill-available;
     }
 
@@ -23,9 +23,9 @@
 
     icc-layout-right {
       display: flex;
+      flex: 0 0 250px;
       position: relative;
       z-index: 1;
-      width: 250px;
       min-width: 20px;
       height: -webkit-fill-available;
     }
