--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -52,6 +52,7 @@
     }
 
     icc-text-filter,
+    icc-number-filter,
     icc-select-filter {
       border-top: 1px solid icc.icc-theme(app-border-basic-color);
     }
