--- a/projects/icc/grid/src/components/column-filter/number/number-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/number/number-filter.component.html
@@ -1,7 +1,7 @@
-<icc-number-field
+<icc-text-field
   [fieldConfig]="fieldConfig"
   [value]="value"
   [showFieldEditIndicator]="false"
   (valueChange)="onValueChange($event)"
 >
-</icc-number-field>
+</icc-text-field>
