--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
@@ -11,7 +11,14 @@
 
   icc-number-field {
     width: unset;
-    input {
+
+    ::ng-deep .icc-form-field-label {
+      display: flex;
+      flex-direction: row;
+      justify-content: end;
+    }
+
+    ::ng-deep input {
       text-align: center;
     }
   }
