--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -42,7 +42,7 @@
   }
 
   [iccInput] {
-    height: 1.75rem;
+    //height: 1.75rem;
     border: none;
     background-color: transparent;
     color: icc.icc-theme(app-text-basic-color);
