--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -1,5 +1,6 @@
 :host {
   .icc-form-field {
+    line-height: 28px;
     padding: 1px 0 1px 5px;
     position: relative;
 
@@ -59,7 +60,7 @@
   }
 
   .icc-form-field-label {
-    line-height: 1.75rem;
+    //line-height: 1.75rem;
     font-size: 0.6875rem;
     font-weight: 500 !important;
     white-space: nowrap;
@@ -72,7 +73,7 @@
   .icc-form-field-suffix {
     display: flex;
     align-items: center;
-    height: 1.75rem;
+    //height: 1.75rem;
     font-size: 0.6875rem;
 
     ::ng-deep icc-icon {
