--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
@@ -22,6 +22,11 @@
         justify-content: end;
       }
 
+      .icc-form-field-container {
+        background-color: unset;
+        border-bottom: 0px;
+      }
+
       input {
         text-align: center;
       }
