--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -1,6 +1,6 @@
 :host {
   .icc-form-field {
-    line-height: 28px;
+    line-height: 1.75rem; // TODO form field height variable
     padding: 1px 0 1px 5px;
     position: relative;
 
@@ -60,7 +60,7 @@
   }
 
   .icc-form-field-label {
-    //line-height: 1.75rem;
+    line-height: 1.75rem; // TODO form field height variable
     font-size: 0.6875rem;
     font-weight: 500 !important;
     white-space: nowrap;
@@ -73,7 +73,7 @@
   .icc-form-field-suffix {
     display: flex;
     align-items: center;
-    //height: 1.75rem;
+    height: 1.75rem; // TODO form field height variable
     font-size: 0.6875rem;
 
     ::ng-deep icc-icon {
