--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -53,7 +53,8 @@
 
     icc-text-filter,
     icc-number-filter,
-    icc-select-filter {
+    icc-select-filter,
+    icc-date-range-filter {
       border-top: 1px solid icc.icc-theme(app-border-basic-color);
     }
 
