date range filter

--- a/projects/icc/grid/src/components/column-filter/date-range/date-range-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/date-range/date-range-filter.component.html
@@ -5,3 +5,8 @@
   (valueChange)="onValueChange($event)"
 >
 </icc-date-range-field>
+
+<!--
+<icc-date-range-field [fieldConfig]="dateRangeFieldConfig" [value]="range" (valueChange)="updateRange($event)">
+</icc-date-range-field>
+-->
