--- a/projects/icc/grid/src/components/grid-row/grid-row.component.html
+++ b/projects/icc/grid/src/components/grid-row/grid-row.component.html
@@ -15,7 +15,7 @@
       'max-width': getColumnWidth(column),
     }"
   >
-    <icc-dynamic-grid-cell [gridConfig]="gridConfig" [rowIndex]="rowIndex" [column]="column" [record]="record">
-    </icc-dynamic-grid-cell>
+    <icc-grid-cell-view [gridConfig]="gridConfig" [rowIndex]="rowIndex" [column]="column" [record]="record">
+    </icc-grid-cell-view>
   </icc-grid-cell>
 </ng-container>
