--- a/projects/icc/tree/src/components/tree-row/tree-row.component.html
+++ b/projects/icc/tree/src/components/tree-row/tree-row.component.html
@@ -29,6 +29,6 @@
       'max-width': getColumnWidth(column),
     }"
   >
-    <icc-dynamic-grid-cell [record]="record" [column]="column"> </icc-dynamic-grid-cell>
+    <icc-grid-cell-view [record]="record" [column]="column"> </icc-grid-cell-view>
   </icc-grid-cell>
 </ng-container>
