--- a/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/text/cell-edit-text.component.html
+++ b/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/text/cell-edit-text.component.html
@@ -1,3 +1,9 @@
+<icc-text-field [fieldConfig]="fieldConfig" [value]="value" (valueChange)="onValueChange($event)"> </icc-text-field>
+
+<!--
+  [value]="value"
+  (valueChange)="onValueChange($event)"
+  
 <sun-form-field *ngIf="field" [ngClass]="'sun-grid-form-field-edit'">
   <input
     #cellInput
@@ -16,3 +22,4 @@
   <span *ngIf="message" [ngClass]="'sun-menu warning'" sunSuffix (click)="resetValue($event)"></span>
   <span *ngIf="isValueChanged()" [ngClass]="'sun-menu check'" sunSuffix (click)="resetValue($event)"></span>
 </sun-form-field>
+-->
