--- a/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/text/cell-edit-text.component.scss
+++ b/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/text/cell-edit-text.component.scss
@@ -1,25 +1,25 @@
 :host {
   display: flex;
   width: 100%;
-
   align-items: center;
 
   icc-text-field {
     width: 100%;
-
-    ::ng-deep .icc-form-field {
-      padding: 0px;
-      line-height: 20px;
-    }
-    ::ng-deep .icc-form-field-suffix {
-      height: 20px;
-    }
-    ::ng-deep .icc-form-field-container {
-      border-bottom: none;
-      padding-right: 0px;
-    }
-    ::ng-deep input {
-      width: 100%;
+    ::ng-deep {
+      .icc-form-field {
+        padding: 0px;
+        line-height: 20px;
+      }
+      .icc-form-field-suffix {
+        height: 20px;
+      }
+      .icc-form-field-container {
+        border-bottom: none;
+        padding-right: 0px;
+      }
+      input {
+        width: 100%;
+      }
     }
   }
 }
