--- a/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/select/cell-edit-select.component.scss
+++ b/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/select/cell-edit-select.component.scss
@@ -1,7 +1,25 @@
-.sun-select-cell-edit-option {
-  padding: 0rem 0.625rem;
-}
+:host {
+  display: flex;
+  width: 100%;
+  align-items: center;
 
-.sun-select-cell-edit-checkbox {
-  height: 20px;
+  icc-select-field {
+    width: 100%;
+    ::ng-deep {
+      .icc-form-field {
+        padding: 0px;
+        line-height: 20px;
+      }
+      .icc-form-field-suffix {
+        height: 20px;
+      }
+      .icc-form-field-container {
+        border-bottom: none;
+        padding-right: 0px;
+      }
+      input {
+        width: 100%;
+      }
+    }
+  }
 }
