--- a/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/date/cell-edit-date.component.html
+++ b/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/date/cell-edit-date.component.html
@@ -1,1 +1,1 @@
-<icc-date-field [fieldConfig]="fieldConfig" [value]="value" (valueChange)="onValueChange($event)"> </icc-date-field>
+<icc-date-field [fieldConfig]="fieldConfig" [form]="form" (valueChange)="onValueChange($event)"> </icc-date-field>
