--- a/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/number/cell-edit-number.component.html
+++ b/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/number/cell-edit-number.component.html
@@ -1,1 +1,1 @@
-<icc-number-field [fieldConfig]="fieldConfig" [value]="value" (valueChange)="onValueChange($event)"> </icc-number-field>
+<icc-number-field [fieldConfig]="fieldConfig" [form]="form" (valueChange)="onValueChange($event)"> </icc-number-field>
