--- a/projects/icc-demo/src/app/views/select/demos/string-array/string-array.component.html
+++ b/projects/icc-demo/src/app/views/select/demos/string-array/string-array.component.html
@@ -5,4 +5,10 @@
     [value]="singleListState"
     [options]="listStates"
   ></icc-select-field>
+
+  <icc-select-field
+    [fieldConfig]="multiSelectionList"
+    [value]="multiListStates"
+    [options]="listStates"
+  ></icc-select-field>
 </div>
