--- a/projects/icc-demo/src/app/views/select/demos/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/views/select/demos/simple-select/simple-select.component.html
@@ -1,6 +1,11 @@
 <div>
   <div><br /></div>
 
+  Local field config and remote object options
+
+  <icc-select-field [fieldConfig]="singleAutocompleteRemote" [value]="singleObjectState"></icc-select-field>
+  <!--
+
   <div>
     No fieldConfig - use default field config with Local field config and local object options
     <icc-select-field [options]="listDefaultStates" [value]="defaultStateValue"></icc-select-field>
@@ -86,4 +91,5 @@
     <icc-select-field [fieldConfig]="singleAllAutocompleteRemoteList" [value]="singleListState"></icc-select-field>
     <icc-select-field [fieldConfig]="multiAllAutocompleteRemotes" [value]="multiListStates"></icc-select-field>
   </div>
+    -->
 </div>
