--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -99,13 +99,7 @@
                 @if (fieldConfig.multiSelection) {
                   <icc-checkbox [checked]="ref.selected">
                     @if (fieldConfig.singleListOption) {
-                      <icc-filter-highlight
-                        [singleListOption]="fieldConfig.singleListOption"
-                        [options]="result"
-                        [value]="option"
-                        [filterValue]="filterValue"
-                      >
-                      </icc-filter-highlight>
+                      <icc-filter-highlight [value]="option" [filterValue]="filterValue"> </icc-filter-highlight>
                     } @else {
                       <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
                       </icc-filter-highlight>
@@ -113,13 +107,7 @@
                   </icc-checkbox>
                 } @else {
                   @if (fieldConfig.singleListOption) {
-                    <icc-filter-highlight
-                      [singleListOption]="fieldConfig.singleListOption"
-                      [options]="result"
-                      [value]="option"
-                      [filterValue]="filterValue"
-                    >
-                    </icc-filter-highlight>
+                    <icc-filter-highlight [value]="option" [filterValue]="filterValue"> </icc-filter-highlight>
                   } @else {
                     <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
                     </icc-filter-highlight>
