grid select edit and filter

--- a/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/select/cell-edit-select.component.html
+++ b/projects/icc/grid/src/components/grid-cell/grid-cell-edit/cell-edit/select/cell-edit-select.component.html
@@ -1,8 +1,1 @@
-<icc-select-field
-  *ngIf="form && fieldConfig"
-  [form]="form"
-  [fieldConfig]="fieldConfig"
-  [value]="value"
-  (valueChange)="onValueChange($event)"
->
-</icc-select-field>
+<icc-select-field [fieldConfig]="fieldConfig" [form]="form" (valueChange)="onValueChange($event)"> </icc-select-field>
