--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -13,8 +13,10 @@
       </icc-label>
       <input
         iccInput
+        #inputEl
         type="text"
         autocomplete="off"
+        (mouseleave)="onMouseleave()"
         [readonly]="!!fieldConfig.selectOnly"
         [formControlName]="fieldName!"
         (isOverlayOpen)="overlayOpen($event)"
